<resources>
    <string name="app_name">Eventku</string>

    <!-- Atribut   -->
    <string name="pw">Password</string>
    <string name="kpw">Konfirmasi Password</string>
    <string name="nol">0</string>
    <string name="resitext4">Nomor Pembayaran Bank transfer</string>
    <string name="noresi">9888-0000-0432-0278</string>

    <!--    Spinner-->
    <string-array name="bank">
        <item>BCA</item>
        <item>BNI</item>
        <item>BRI</item>
    </string-array>


    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="kembali">Kembali</string>
    <string name="can_not_create">Tidak Dapat Membuat Akun Baru</string>
    <string name="invalid_account">Akun Tidak Terdaftar</string>
    <string name="emailexists">Email Telah Tersedia, Gunakan Email Lain</string>
    <string name="lihat">Lihat Detail</string>

    <string name="warunkv">Warunk V</string>
    <string name="profil">Profil</string>
    <string name="carievent">Cari Event</string>
    <string name="pendaftaran">Pendaftaran Event</string>
    <string name="pendaftarantext">Daftarkan Event Anda Disini!</string>
    <string name="profiltext">Informasi Data Diri Anda</string>
    <string name="carieventtext">Temukan Event Yang Anda Sukai</string>
    <string name="kontak">0895701992393</string>
    <string name="petunjuk">Petunjuk Lokasi</string>

    <string name="tanggal">Tanggal</string>
    <string name="informasikontak">Informasi Kontak</string>
    <string name="lokasi">Lokasi</string>

    <string name="deskripsi_event">Deskripsi Event</string>
    <string name="photography">Workshop Photography</string>
    <string name="tglphotography">11 Nov 2019</string>
    <string name="lokasiphotography">Cafe 3Eatery</string>
    <string name="deskripsi1">Workshop Photography diadakan oleh komunitas pecinta fotograpi terbesar
    di Pontianak. Menghadirkan Narasumber terkenal dengan pembahasan tema mengenai teknik dasar dan
    tips-tips menarik dalam bidang fotografi.</string>

    <string name="pontianakcycling">Pontianak Cycling Club</string>
    <string name="tglcycling">10 Nov 2019</string>
    <string name="lokasicycling">Area Car Free Day Pontianak</string>
    <string name="deskripsicycling">Pontianak Cycling Club mengajak seluruh masyarakat Pontianak untuk mengikuti
    kegiatan bersepeda sehat dan akan diadakan undian doorprize.</string>

    <string name="foodfestival">Food Festival</string>
    <string name="tglfood">4 Nov 2019</string>
    <string name="lokasifood">Ayani Mega Mall</string>
    <string name="deskripsifood">Food Festival menghadirkan stand-stand yang memperkenalkan makanan-makanan
    khas Pontianak dan juga sehat tentunya.</string>

    <string name="paintandpaper">Paint and Paper</string>
    <string name="tglpain">20 Nov 2019</string>
    <string name="lokasipain">Rumah Radankg</string>
    <string name="deskripsipain">Art Community Project mengadakan event melukis dan lettering bersama
    komunitas-komunitas seni di Pontianak. Rangkaian acara menarik dan juga menghadirkan stand-stand seni
    karya masyarakat Pontianak pecinta seni.</string>

    <string name="seminar">Seminar Nasional</string>
    <string name="tglseminar">18 Nov 2019</string>
    <string name="lokasiseminar">Gedung Konferensi 7in1, Universitas Tanjungpura</string>
    <string name="deskripsiseminar">Seminar Nasional bertemakan "Improve Your Business Leadership" dengan menghadirkan
        pemateri hebat dari Universitas Tanjungpura. Peserta yang membeli tiket dan datang untuk mencari
        ilmu yang bermanfaat pada seminar ini akan diberikan E-Sertifikat.</string>

    <string name="gamecomp">Game Competition</string>
    <string name="tglgame">24 Nov 2019</string>
    <string name="lokasigame">Warunk V</string>
    <string name="deskripsigame">Mengajak seluruh pecinta game offline maupun online di seluruh Kota
        Pontianak untuk hadir dalam event kali ini. Akan ada banyak kompetisi game yang diadakan, tidak hanya satu game
        saja, juga akan ada banyak hadiah dan kejutan yang disediakan. FREE HTM dan jangan lupa untuk membawa laptop/smartphone
        kesayangan para pecinta game!</string>

    <string name="health">Healthy Body, Happy Kids</string>
    <string name="tglhealth">21 Des 2019</string>
    <string name="lokasihealth">Gedung Konferensi, Universitas Tanjungpura</string>
    <string name="deskripsihealth">Healthy Body, Happy Kids adalah kegiatan sosialisasi mengenai kesehatan anak yang sangat
        penting di era modern seperti ini. Mengingatkan bahwa kesehatan anak sangat penting untuk terus dijaga agar anak-anak
        tetap kuat dan ceria dalam tumbuh kembangnya.</string>

    <string name="volun">Volunteer Day</string>
    <string name="tglvolun">5 Des 2019</string>
    <string name="lokasivolun">Alun-Alun Kapuas</string>
    <string name="deskripsivolun">Dalam memperingati Volunteer Day, kami mengajak seluruh masyarakat untuk turut serta dalam
        membersihkan lingkungan sekitaran Pontianak.</string>
</resources>
