<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home.CariEventActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="12dp"
        android:id="@+id/toolbar">
        <ImageView
            android:id="@+id/arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back"
            android:tint="@color/putih"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carievent"
            android:textColor="@color/putih"
            android:textSize="22dp"
            android:layout_marginLeft="35dp"/>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="match_parent"
        android:padding="14dp"
        android:layout_height="75dp"
        android:src="@drawable/eventku" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/event1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="240dp"
                        android:layout_marginLeft="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/photography"
                        android:textStyle="bold"
                        android:textSize="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tglphotography"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="15dp"
                        android:textSize="15dp"/>

                </LinearLayout>

                <Button
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/putih"
                    android:background="@drawable/round"
                    android:onClick="event1"
                    android:text="@string/lihat"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/event2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="240dp"
                        android:layout_marginLeft="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/pontianakcycling"
                        android:textStyle="bold"
                        android:textSize="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tglcycling"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="15dp"
                        android:textSize="15dp"/>

                </LinearLayout>

                <Button
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="6dp"
                    android:textColor="@color/putih"
                    android:background="@drawable/round"
                    android:layout_marginBottom="4dp"
                    android:onClick="event2"
                    android:text="@string/lihat"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/event3"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="240dp"
                        android:layout_marginLeft="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/foodfestival"
                        android:textStyle="bold"
                        android:textSize="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tglfood"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="15dp"
                        android:textSize="15dp"/>

                </LinearLayout>

                <Button
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/putih"
                    android:background="@drawable/round"
                    android:onClick="event3"
                    android:text="@string/lihat"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/event4"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="240dp"
                        android:layout_marginLeft="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/paintandpaper"
                        android:textStyle="bold"
                        android:textSize="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tglpain"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="15dp"
                        android:textSize="15dp"/>

                </LinearLayout>

                <Button
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/putih"
                    android:background="@drawable/round"
                    android:onClick="event4"
                    android:text="@string/lihat"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/event5"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="240dp"
                        android:layout_marginLeft="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/seminar"
                        android:textStyle="bold"
                        android:textSize="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tglseminar"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="15dp"
                        android:textSize="15dp"/>

                </LinearLayout>

                <Button
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/putih"
                    android:background="@drawable/round"
                    android:onClick="event5"
                    android:text="@string/lihat"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/event6"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="240dp"
                        android:layout_marginLeft="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/gamecomp"
                        android:textStyle="bold"
                        android:textSize="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tglgame"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="15dp"
                        android:textSize="15dp"/>

                </LinearLayout>

                <Button
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/putih"
                    android:background="@drawable/round"
                    android:onClick="event6"
                    android:text="@string/lihat"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>