<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DaftarEvent.Event3Activity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/event3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textAlignment="center"
                    android:text="@string/foodfestival"
                    android:textSize="20dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="5dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_date_range_24dp"
                            android:tint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/tanggal"
                            android:layout_marginLeft="3dp"
                            android:textSize="15dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:text="@string/tglfood"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp">
                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_marginLeft="5dp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_location_24dp"
                                android:tint="@color/colorPrimary"
                                />

                            <TextView
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/lokasi"
                                android:layout_marginLeft="3dp"
                                android:textSize="15dp" />

                            <TextView
                                android:layout_width="210dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:layout_gravity="center_vertical"
                                android:text="@string/lokasifood"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="180dp"
                            android:orientation="vertical">
                            <Button
                                android:layout_width="90dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="3dp"
                                android:layout_marginTop="2dp"
                                android:layout_marginBottom="2dp"
                                android:text="@string/petunjuk"
                                android:layout_gravity="center"
                                android:textAllCaps="false"
                                android:textSize="10dp"
                                android:textColor="@color/putih"
                                android:background="@drawable/round"/>
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="5dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_contact_phone_24dp"
                            android:tint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/informasikontak"
                            android:layout_marginLeft="3dp"
                            android:textSize="15dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:text="@string/kontak"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:onClick="deskripsi3"
                android:orientation="horizontal"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/name"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:textSize="15dp"
                    android:textColor="@color/putih"
                    android:text="@string/deskripsi_event" />

                <Button
                    android:id="@+id/arrowBtn"
                    android:onClick="deskripsi3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="190dp"
                    android:backgroundTint="@color/putih"
                    android:background="@drawable/ic_keyboard_arrow_right_blue_24dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/expandableView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingBottom="12dp"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/deskripsifood"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>